docs: update v3 schemas
This adds the request schemas and fixes all known issues.

--- a/content/en/docs/Reference/api/v3.md
+++ b/content/en/docs/Reference/api/v3.md
@@ -22,6 +22,11 @@ This describes general behavior of all API endpoints
 
 ## JSON Schemas
 
-This is a full list of all JSON schemas for the response bodies.
+This is a list of all JSON schemas for request and response bodies.
+
+As of now, these do **not** describe the schema for the resources themselves. This means that any property with any value will pass validation
+for the different resources Envelope Zero knows, e.g. a Transaction.
+
+However, these schemas can be used to validate that the general request or response format is implemented correctly.
 
 {{< directoryindex path="/static/schemas/v3" pathURL="/schemas/v3" >}}
